<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:backgroundTintMode="multiply"
    android:keepScreenOn="true"
    tools:context=".MainActivity">


    <ImageView
        android:id="@+id/volumeIcon"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:onClick="invokeVolumeSet"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/volumehighiconfinal"
        tools:ignore="SpeakableTextPresentCheck" />

    <ImageView
        android:id="@+id/imageView11"
        android:layout_width="367dp"
        android:layout_height="99dp"
        android:contentDescription="@string/logo"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="410dp"
        android:layout_height="391dp"
        android:layout_marginBottom="100sp"
        android:baselineAligned="false"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Title_VsComp"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="#D14444"
                android:textColorHint="#F4EEEE"
                android:textSize="24sp"
                android:textStyle="normal" />

            <Button
                android:id="@+id/easyMode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10sp"
                android:layout_marginTop="50sp"
                android:layout_marginRight="10sp"
                android:backgroundTint="#D14444"
                android:fontFamily="sans-serif"
                android:includeFontPadding="true"
                android:onClick="invokeEasy"
                android:shadowColor="#000000"
                android:shadowDy="50"
                android:text="@string/easyMode"
                android:textColor="#FFFFFF"
                app:cornerRadius="45sp" />

            <Button
                android:id="@+id/hardMode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10sp"
                android:layout_marginTop="25sp"
                android:layout_marginRight="10sp"
                android:backgroundTint="#D14444"
                android:fontFamily="sans-serif"
                android:onClick="invokeLevelHard"
                android:text="@string/hardMode"
                android:textColor="#FFFFFF"
                app:cornerRadius="45sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Title_VsHuman"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textColor="#D14444"
                android:textSize="24sp" />

            <Button
                android:id="@+id/button3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10sp"
                android:layout_marginTop="50sp"
                android:layout_marginRight="10sp"
                android:backgroundTint="#D14444"
                android:backgroundTintMode="src_in"
                android:fontFamily="sans-serif"
                android:onClick="invokePvP"
                android:text="@string/againstHuman"
                android:textColor="#FFFFFF"
                app:cornerRadius="45sp" />
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:fontFamily="sans-serif"
        android:includeFontPadding="true"
        android:minHeight="32dp"
        android:onClick="invokeCredits"
        android:text="@string/creditHeader"
        android:textColor="#F3EEEE"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>